--- a/notes/index.html
+++ b/notes/index.html
@@ -33,7 +33,13 @@ Ormissia's Blog</a>
 </code></pre></div></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>Slice</span></h5><div class=card><div class=card-body><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>slice</span> <span style=color:#f92672>:=</span> []<span style=color:#66d9ef>int</span>{<span style=color:#ae81ff>2</span>, <span style=color:#ae81ff>3</span>, <span style=color:#ae81ff>4</span>}
 </code></pre></div><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>slice</span> <span style=color:#f92672>:=</span> []byte(<span style=color:#e6db74>&#34;Hello&#34;</span>)
 </code></pre></div></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>Strings</span></h5><div class=card><div class=card-body><p>test</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>String</span> <span style=color:#a6e22e>str</span> = <span style=color:#e6db74>&#34;123&#34;</span>;
-</code></pre></div></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>函数</span></h5><div class=card><div class=card-body><p>函数是带有参数的表达式。</p><pre><code>(x: Int) =&gt; x + 1
+</code></pre></div></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>函数</span></h5><div class=card><div class=card-body><p>函数参数为<code>val</code>类型，且可以给出默认值</p><pre><code>def test(a: Int, b: Int = 1, c: Int = 2): Unit = {
+  println(s&quot;$a $b $c&quot;)
+}
+  
+  test(1, 2)      //1 2 2
+  test(1, c = 4)  //1 1 4
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>匿名函数</span></h5><div class=card><div class=card-body><p>函数是带有参数的表达式。</p><pre><code>(x: Int) =&gt; x + 1
 </code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>方法</span></h5><div class=card><div class=card-body><p>方法的表现和行为和函数非常类似，但是它们之间有一些关键的差别。</p><p>方法由def关键字定义。def后面跟着一个名字、参数列表、返回类型和方法体。</p><pre><code>def addThenMultiply(x: Int, y: Int)(multiplier: Int): Int = (x + y) * multiplier
 println(addThenMultiply(1, 2)(3)) // 9
 </code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>字符串拼接</span></h5><div class=card><div class=card-body><pre><code>val a = 1
@@ -47,12 +53,68 @@ val c = s&quot;$a+$b=${a + b}&quot;
     println(c)
   }
 }
-</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>类</span></h5><div class=card><div class=card-body><blockquote><p>可以使用<code>class</code>关键字定义一个类，后面跟着它的名字和构造参数。</p></blockquote><ul><li>类里，裸露的代码是默认构造中的</li><li>类名构造器中的参数就是类的成员属性，默认是<code>val</code>类型，且是<code>private</code></li><li>只有在类名构造器中的参数可以设置成<code>var</code>，其他方法函数中的参数都是<code>val</code>类型的，且不允许设置成<code>var</code>类型</li></ul><pre><code>class Greeter(prefix: String, var suffix: String) {
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>类</span></h5><div class=card><div class=card-body><p>可以使用<code>class</code>关键字定义一个类，后面跟着它的名字和构造参数。</p><ul><li>类里裸露的代码是默认构造中的</li><li>类名构造器中的参数就是类的成员属性，默认是<code>val</code>类型，且是<code>private</code></li><li>只有在类名构造器中的参数可以设置成<code>var</code>，其他方法函数中的参数都是<code>val</code>类型的，且不允许设置成<code>var</code>类型</li></ul><pre><code>class Greeter(prefix: String, var suffix: String) {
   var name = &quot;name&quot;
 
   def greet(name: String): Unit =
     println(prefix + name + suffix)
 }
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>循环</span></h5><div class=card><div class=card-body><p>scala中嵌套<code>for</code>循环可以写到一起，循环上可以加守卫（条件）。
+循环结果可以通过<code>yield</code>收集到一个集合中</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#75715e>// val value = for (i &lt;- 1 to 9; j &lt;- 1 to i) yield {
+</span><span style=color:#75715e></span><span style=color:#a6e22e>val</span> <span style=color:#a6e22e>value</span> = <span style=color:#66d9ef>for</span> (<span style=color:#a6e22e>i</span> <span style=color:#f92672>&lt;-</span> <span style=color:#ae81ff>1</span> <span style=color:#a6e22e>to</span> <span style=color:#ae81ff>9</span>; <span style=color:#a6e22e>j</span> <span style=color:#f92672>&lt;-</span> <span style=color:#ae81ff>1</span> <span style=color:#a6e22e>to</span> <span style=color:#ae81ff>10</span> <span style=color:#66d9ef>if</span> (<span style=color:#a6e22e>j</span> <span style=color:#f92672>&lt;=</span> <span style=color:#a6e22e>i</span>)) <span style=color:#a6e22e>yield</span> {
+  <span style=color:#a6e22e>i</span> <span style=color:#f92672>*</span> <span style=color:#a6e22e>j</span>
+}
+<span style=color:#66d9ef>for</span> (<span style=color:#a6e22e>i</span> <span style=color:#f92672>&lt;-</span> <span style=color:#a6e22e>value</span>) {
+  println(<span style=color:#a6e22e>i</span>)
+}
+</code></pre></div></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>偏应用函数</span></h5><div class=card><div class=card-body><p>类似于重新封装一下函数</p><pre><code>def log(date: Date, logType: String, msg: String): Unit = {
+  println(s&quot;$date\t$logType\t$msg&quot;)
+}
+
+val info = log(_, &quot;info&quot;, _)
+info(new Date, &quot;this is a info msg&quot;)  //Thu Jul 22 23:14:04 CST 2021	info	this is a info msg
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>可变长度参数以及foreach</span></h5><div class=card><div class=card-body><pre><code>def foreachTest(a: Int*): Unit = {
+  //for (i &lt;- a) {
+  //  print(i)
+  //}
+
+  //a.foreach((x: Int) =&gt; {
+  //  print(x)
+  //})
+
+  //a.foreach(print(_))
+  a.foreach(print)
+}
+
+foreachTest(1, 2, 3, 4, 5)  //12345
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>高阶函数</span></h5><div class=card><div class=card-body><p>函数作为参数</p><pre><code>def computer(a: Int, b: Int, f: (Int, Int) =&gt; Int): Unit = {
+  val res = f(a, b)
+  println(res)
+}
+
+computer(1, 2, (x: Int, y: Int) =&gt; {x + y}) //3
+computer(1, 2, _ + _)                       //3
+</code></pre></div></div><div class=card><div class=card-body><p>函数作为返回值</p><pre><code>def factory(i: String): (Int, Int) =&gt; Int = {
+  def plus(x: Int, y: Int): Int = {
+    x + y
+  }
+
+  if (i.equals(&quot;+&quot;)) {
+    plus
+  } else {
+    _ * _
+  }
+}
+
+val plus = factory(&quot;+&quot;)
+computer(1,2,plus)  //3
+</code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>柯里化</span></h5><div class=card><div class=card-body><p>多个参数列表</p><pre><code>def testFunc(a:Int*)(b:Int*)(c:String*): Unit ={
+  a.foreach(print)
+  b.foreach(print)
+  c.foreach(print)
+}
+
+testFunc(1,2,3)(2,3,4)(&quot;3&quot;,&quot;4&quot;,&quot;5&quot;) //123234345
 </code></pre></div></div></div></div><div class=note-card><div class=item><h5 class=note-title><span>按年月日分组聚合</span></h5><div class=card><div class=card-body><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>group</span> <span style=color:#66d9ef>by</span> date_format(<span style=color:#f92672>&lt;</span>field_name<span style=color:#f92672>&gt;</span>, <span style=color:#f92672>&lt;</span>format<span style=color:#f92672>&gt;</span>);
 </code></pre></div><p>根据format字符串格式化date值。下列修饰符可以被用在format字符串中：</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>%M 月名字<span style=color:#f92672>(</span>January……December<span style=color:#f92672>)</span> 
 %W 星期名字<span style=color:#f92672>(</span>Sunday……Saturday<span style=color:#f92672>)</span> 
