--- a/notes/scala/index.html
+++ b/notes/scala/index.html
@@ -152,8 +152,8 @@ Ormissia's Blog</a>
   println(s&quot;$a $b $c&quot;)
 }
   
-  test(1, 2)      //1 2 2
-  test(1, c = 4)  //1 1 4
+test(1, 2)      //1 2 2
+test(1, c = 4)  //1 1 4
 </code></pre></div>
 </div>
 </div>
@@ -428,6 +428,46 @@ for (k &lt;- keys) {
 <pre><code>val map2 = mutable.Map((&quot;a&quot;, 1), &quot;b&quot; -&gt; 2, (&quot;c&quot;, 3), (&quot;a&quot;, 4))
 map2.put(&quot;a&quot;, 5)
 </code></pre></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>案例类</span></h5>
+<div class=card>
+<div class=card-body></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>模式匹配</span></h5>
+<div class=card>
+<div class=card-body></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>特质</span></h5>
+<div class=card>
+<div class=card-body></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>偏函数</span></h5>
+<div class=card>
+<div class=card-body></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>隐式转换</span></h5>
+<div class=card>
+<div class=card-body></div>
 </div>
 </div>
 </div>
