--- a/notes/linux/index.html
+++ b/notes/linux/index.html
@@ -127,9 +127,16 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/>Linux</a>
 <ul class=active>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/linux/bash/>Bash</a>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/shell/>Shell</a>
 <ul>
-<li><a href=/notes/linux/bash/basic/ title="Bash Command">Bash Command</a></li>
+<li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
+<li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+</ul>
+</li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/tool/>Tool</a>
+<ul>
+<li><a href=/notes/linux/tool/vi/ title=vi>vi</a></li>
 </ul>
 </li>
 </ul>
@@ -147,18 +154,25 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>快捷键</span></h5>
 <div class=card>
-<div class=card-body><p><code>Ctrl+a</code>回到命令行开头&ndash;<code>Home</code></p>
-<p><code>Ctrl+e</code>回到命令行的尾部&ndash;<code>End</code></p>
-</div>
-</div>
-<div class=card>
-<div class=card-body><p><code>Ctrl+u</code>删除光标前边的所有字符</p>
-<p><code>Ctrl+k</code>删除光标后边的所有字符</p>
-<p><code>Ctrl+w</code>删除光标前的一个单词</p>
-</div>
+<div class=card-body><p>回到命令行开头&ndash;<code>Home</code></p>
+<pre><code>Ctrl+a
+</code></pre><p>回到命令行的尾部&ndash;<code>End</code></p>
+<pre><code>Ctrl+e
+</code></pre></div>
 </div>
 <div class=card>
-<div class=card-body><code>Ctrl+r</code>输入曾经的命令下的某个单词或字母，按照单词的匹配<code>history</code></div>
+<div class=card-body><p>删除光标前边的所有字符</p>
+<pre><code>Ctrl+u
+</code></pre><p>删除光标后边的所有字符</p>
+<pre><code>Ctrl+k
+</code></pre><p>删除光标前的一个单词</p>
+<pre><code>Ctrl+w
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>输入曾经的命令下的某个单词或字母，按照单词的匹配<code>history</code></p>
+<pre><code>Ctrl+r
+</code></pre></div>
 </div>
 </div>
 </div>
@@ -194,11 +208,23 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>nc</span></h5>
 <div class=card>
-<div class=card-body><p>接收方</p>
+<div class=card-body><p>简单的文件传输工具</p>
+<p>接收方</p>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc -l <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &gt; filename
 </code></pre></div><p>发送方</p>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nc <span style=color:#f92672>[</span>ip<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>port<span style=color:#f92672>]</span> &lt; filename
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>gzip</span></h5>
+<div class=card>
+<div class=card-body><p>解压<code>*.gz</code>的压缩文件</p>
+<p>与<code>*.tar.gz</code>文件不同，<code>*.gz</code>文件需要用<code>gzip</code>来解压</p>
+<pre><code>gzip -d filename
+</code></pre></div>
 </div>
 </div>
 </div>
@@ -223,6 +249,51 @@ Ormissia's Blog</a>
 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
 -x exit的意思，主要是配合-s使用。。
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>快捷键</span></h5>
+<div class=card>
+<div class=card-body></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>命令</span></h5>
+<div class=card>
+<div class=card-body><p>显示行号</p>
+<pre><code>:set number
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>在<code>vi</code>中执行shell命令</p>
+<pre><code>:!ls-l
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将<code>shell</code>命令的结果插入到当前行的下一行</p>
+<pre><code>:r !date  //读取系统时间并插入到当前行的下一行
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容</p>
+<pre><code>:62,72 !sort  //将62行到72行的内容进行排序
+</code></pre><p>当前光标所在行，除可以指定行号外，也可以用<code>.</code>表示</p>
+<pre><code>:. !tr [a-z] [A-Z]  //将当前行的小写转为大写
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容</p>
+<pre><code>:62,72 w !sort  //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
+<pre><code>:62 w !bash //将会把第62行的内容作为bash命令来执行并显示结果，而且不会改变当前编辑的文件的内容
+</code></pre></div>
 </div>
 </div>
 </div>
