--- a/notes/sql/index.html
+++ b/notes/sql/index.html
@@ -127,9 +127,16 @@ Ormissia's Blog</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/linux/>Linux</a>
 <ul>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/linux/bash/>Bash</a>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/shell/>Shell</a>
 <ul>
-<li><a href=/notes/linux/bash/basic/ title="Bash Command">Bash Command</a></li>
+<li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
+<li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+</ul>
+</li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/tool/>Tool</a>
+<ul>
+<li><a href=/notes/linux/tool/vi/ title=vi>vi</a></li>
 </ul>
 </li>
 </ul>
