deploy: 7417aaff9593d34a2fc538268a1e6991c5db421d

--- a/notes/go/advance/advance/index.html
+++ b/notes/go/advance/advance/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Go Timer</title>
+<title>Advance</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,14 +12,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Go Timer">
+<meta property="og:title" content="Advance">
 <meta property="og:description" content="时间转换 字符串转时间
 time.Parse() 时间转字符串
 time.Format() 时间转时间戳
 Time.Unix() 时间戳转时间
 time.Unix()     ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/go/basic/timer/"><meta property="article:section" content="notes">
+<meta property="og:url" content="https://ormissia.github.io/notes/go/advance/advance/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -59,15 +59,15 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/>Go</a>
 <ul class=active>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/basic/>Basics</a>
-<ul class=active>
-<li><a class=active href=/notes/go/basic/timer/ title="Go Timer">Go Timer</a></li>
+<i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
+<ul>
+<li><a href=/notes/go/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
-<ul>
-<li><a href=/notes/go/advance/basic_type/ title="Advance Types">Advance Types</a></li>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
+<ul class=active>
+<li><a class=active href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
