--- a/notes/scala/basic/basic_type/index.html
+++ b/notes/scala/basic/basic_type/index.html
@@ -61,13 +61,13 @@ Ormissia's Blog</a>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
 <ul>
-<li><a href=/notes/go/basic/timer/ title="Go Timer">Go Timer</a></li>
+<li><a href=/notes/go/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
 <ul>
-<li><a href=/notes/go/advance/basic_type/ title="Advance Types">Advance Types</a></li>
+<li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
