--- a/notes/go/advance/index.html
+++ b/notes/go/advance/index.html
@@ -57,13 +57,13 @@ Ormissia's Blog</a>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
 <ul>
-<li><a href=/notes/go/basic/timer/ title="Go Timer">Go Timer</a></li>
+<li><a href=/notes/go/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 <li>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
-<li><a href=/notes/go/advance/basic_type/ title="Advance Types">Advance Types</a></li>
+<li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
@@ -152,76 +152,16 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>Strings</span></h5>
+<h5 class=note-title><span>时间转换</span></h5>
 <div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>str</span> <span style=color:#f92672>:=</span> <span style=color:#e6db74>&#34;Hello&#34;</span>
-</code></pre></div><p>Multiline string</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>str</span> <span style=color:#f92672>:=</span> <span style=color:#e6db74>`Multiline
-</span><span style=color:#e6db74>string`</span>
-</code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>Numbers</span></h5>
-<div class=card>
-<div class=card-body><p>Typical types</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>num</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>3</span>          <span style=color:#75715e>// int
-</span><span style=color:#75715e></span><span style=color:#a6e22e>num</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>3.</span>         <span style=color:#75715e>// float64
-</span><span style=color:#75715e></span><span style=color:#a6e22e>num</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>3</span> <span style=color:#f92672>+</span> <span style=color:#ae81ff>4i</span>     <span style=color:#75715e>// complex128
-</span><span style=color:#75715e></span><span style=color:#a6e22e>num</span> <span style=color:#f92672>:=</span> byte(<span style=color:#e6db74>&#39;a&#39;</span>)  <span style=color:#75715e>// byte (alias for uint8)
-</span></code></pre></div><p>Other Types</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#66d9ef>var</span> <span style=color:#a6e22e>u</span> <span style=color:#66d9ef>uint</span> = <span style=color:#ae81ff>7</span>        <span style=color:#75715e>// uint (unsigned)
-</span><span style=color:#75715e></span><span style=color:#66d9ef>var</span> <span style=color:#a6e22e>p</span> <span style=color:#66d9ef>float32</span> = <span style=color:#ae81ff>22.7</span>  <span style=color:#75715e>// 32-bit float
-</span></code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>Arrays</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#75715e>// var numbers [5]int
-</span><span style=color:#75715e></span><span style=color:#a6e22e>numbers</span> <span style=color:#f92672>:=</span> [<span style=color:#f92672>...</span>]<span style=color:#66d9ef>int</span>{<span style=color:#ae81ff>0</span>, <span style=color:#ae81ff>0</span>, <span style=color:#ae81ff>0</span>, <span style=color:#ae81ff>0</span>, <span style=color:#ae81ff>0</span>}
-</code></pre></div></div>
-</div>
-</div>
-</div>
-<div class="note-card medium-note">
-<div class=item>
-<h5 class=note-title><span>Pointers</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#66d9ef>func</span> <span style=color:#a6e22e>main</span> () {
-  <span style=color:#a6e22e>b</span> <span style=color:#f92672>:=</span> <span style=color:#f92672>*</span><span style=color:#a6e22e>getPointer</span>()
-  <span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Println</span>(<span style=color:#e6db74>&#34;Value is&#34;</span>, <span style=color:#a6e22e>b</span>)
-</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#66d9ef>func</span> <span style=color:#a6e22e>getPointer</span> () (<span style=color:#a6e22e>myPointer</span> <span style=color:#f92672>*</span><span style=color:#66d9ef>int</span>) {
-  <span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>234</span>
-  <span style=color:#66d9ef>return</span> <span style=color:#f92672>&amp;</span><span style=color:#a6e22e>a</span>
-</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>a</span> <span style=color:#f92672>:=</span> new(<span style=color:#66d9ef>int</span>)
-<span style=color:#f92672>*</span><span style=color:#a6e22e>a</span> = <span style=color:#ae81ff>234</span>
-</code></pre></div><p>Pointers point to a memory location of a variable. Go is fully garbage-collected.</p>
-</div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>Type Conversion</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>i</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>2</span>
-<span style=color:#a6e22e>f</span> <span style=color:#f92672>:=</span> float64(<span style=color:#a6e22e>i</span>)
-<span style=color:#a6e22e>u</span> <span style=color:#f92672>:=</span> uint(<span style=color:#a6e22e>i</span>)
-</code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>Slice</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>slice</span> <span style=color:#f92672>:=</span> []<span style=color:#66d9ef>int</span>{<span style=color:#ae81ff>2</span>, <span style=color:#ae81ff>3</span>, <span style=color:#ae81ff>4</span>}
-</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>slice</span> <span style=color:#f92672>:=</span> []byte(<span style=color:#e6db74>&#34;Hello&#34;</span>)
+<div class=card-body><p>字符串转时间</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Parse</span>()
+</code></pre></div><p>时间转字符串</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Format</span>()
+</code></pre></div><p>时间转时间戳</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>Time</span>.<span style=color:#a6e22e>Unix</span>()
+</code></pre></div><p>时间戳转时间</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Unix</span>()
 </code></pre></div></div>
 </div>
 </div>
