--- a/notes/go/basic/basic/index.html
+++ b/notes/go/basic/basic/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Advance</title>
+<title>Basic</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,12 +12,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Advance">
-<meta property="og:description" content="xargs xargs是给命令传递参数的一个过滤器，可以将管道或标准输入（stdin）数据转换成命令行参数，也能够从文件的输出中读取数据，一般是和管道一起使用。 格式:
-somecommand | xargs [-item] [command] 选项：
--a file 从文件中读入作为 stdin -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。 -p 当每次执行一个argument的时候询问一次用户。 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。 -t 表示先打印命令，然后再执行。 -i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 {}，可以用 {} 代替。 -r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。 -s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。 -L num 从标准输入一次读取 num 行送给 command 命令。 -l 同 -L。 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。 -x exit的意思，主要是配合-s使用。。     ">
+<meta property="og:title" content="Basic">
+<meta property="og:description" content="基础类型内存宽度以及表示范围 bool
+1Byte true/false   uint8
+1Byte 0-255   uint16
+2Byte 0-65535   uint32
+4Byte 0-4294967295   uint64
+8Byte 0-18446744073709551615   int8
+1Byte -128-127   int16
+2Byte -32768-32767   int32
+4Byte -2147483648-2147483647   int64
+6Byte -9223372036854775808-9223372036854775807   byte
+1Byte 类似 uint8   rune
+4Byte 类似 int32   uint
+4Byte / 8Byte 32 或 64 位   int
+4Byte / 8Byte 与 uint 一样大小   float32">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/linux/shell/advance/"><meta property="article:section" content="notes">
+<meta property="og:url" content="https://ormissia.github.io/notes/go/basic/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -54,12 +65,12 @@ Ormissia's Blog</a>
 <li id=list-heading><a href=/notes data-filter=all>笔记</a></li>
 <div class=subtree>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/>Go</a>
+<ul class=active>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
-<ul>
-<li><a href=/notes/go/basic/basic/ title=Basic>Basic</a></li>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/basic/>Basics</a>
+<ul class=active>
+<li><a class=active href=/notes/go/basic/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 <li>
@@ -126,13 +137,13 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/>Linux</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/>Linux</a>
+<ul>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/shell/>Shell</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/shell/>Shell</a>
+<ul>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
-<li><a class=active href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
 </ul>
 </li>
 <li>
@@ -154,25 +165,86 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>xargs</span></h5>
+<h5 class=note-title><span>基础类型内存宽度以及表示范围</span></h5>
 <div class=card>
-<div class=card-body><p><code>xargs</code>是给命令传递参数的一个过滤器，可以将管道或标准输入（stdin）数据转换成命令行参数，也能够从文件的输出中读取数据，一般是和管道一起使用。
-格式:</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>somecommand | xargs <span style=color:#f92672>[</span>-item<span style=color:#f92672>]</span> <span style=color:#f92672>[</span>command<span style=color:#f92672>]</span>
-</code></pre></div><p>选项：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>-a file 从文件中读入作为 stdin
--e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。
--p 当每次执行一个argument的时候询问一次用户。
--n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。
--t 表示先打印命令，然后再执行。
--i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 <span style=color:#f92672>{}</span>，可以用 <span style=color:#f92672>{}</span> 代替。
--r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。
--s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。
--L num 从标准输入一次读取 num 行送给 command 命令。
--l 同 -L。
--d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
--x exit的意思，主要是配合-s使用。。
-</code></pre></div></div>
+<div class=card-body><p><code>bool</code></p>
+<pre><code>1Byte true/false
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>uint8</code></p>
+<pre><code>1Byte 0-255
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>uint16</code></p>
+<pre><code>2Byte 0-65535
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>uint32</code></p>
+<pre><code>4Byte 0-4294967295
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>uint64</code></p>
+<pre><code>8Byte 0-18446744073709551615
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>int8</code></p>
+<pre><code>1Byte -128-127
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>int16</code></p>
+<pre><code>2Byte -32768-32767
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>int32</code></p>
+<pre><code>4Byte -2147483648-2147483647
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>int64</code></p>
+<pre><code>6Byte -9223372036854775808-9223372036854775807
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>byte</code></p>
+<pre><code>1Byte 类似 uint8
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>rune</code></p>
+<pre><code>4Byte 类似 int32
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>uint</code></p>
+<pre><code>4Byte / 8Byte 32 或 64 位
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>int</code></p>
+<pre><code>4Byte / 8Byte 与 uint 一样大小
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>float32</code></p>
+<pre><code>4Byte
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>float64</code></p>
+<pre><code>8Byte
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p><code>string</code></p>
+<pre><code>1Byte （英文） / 2Byte-4Byte（中文，取决于字符编码类型）
+</code></pre></div>
 </div>
 </div>
 </div>
