--- a/notes/sql/index.html
+++ b/notes/sql/index.html
@@ -187,6 +187,16 @@ Ormissia's Blog</a>
 </div>
 </div>
 </div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>`count`统计不重复个数</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>select</span> <span style=color:#66d9ef>count</span>(<span style=color:#66d9ef>distinct</span> (col_name))
+<span style=color:#66d9ef>from</span> <span style=color:#66d9ef>table_name</span>
+</code></pre></div></div>
+</div>
+</div>
+</div>
 </div>
 <div class=paginator>
 </div>
