--- a/notes/sql/dml/dml/index.html
+++ b/notes/sql/dml/dml/index.html
@@ -13,8 +13,8 @@
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
 <meta property="og:title" content="SQL DML">
-<meta property="og:description" content="按年月日分组聚合 group by date_format(<field_name>, <format>); 根据format字符串格式化date值。下列修饰符可以被用在format字符串中：
-%M 月名字(January……December) %W 星期名字(Sunday……Saturday) %D 有英语前缀的月份的日期(1st, 2nd, 3rd, 等等。） %Y 年, 数字, 4 位 %y 年, 数字, 2 位 %a 缩写的星期名字(Sun……Sat) %d 月份中的天数, 数字(00……31) %e 月份中的天数, 数字(0……31) %m 月, 数字(01……12) %c 月, 数字(1……12) %b 缩写的月份名字(Jan……Dec) %j 一年中的天数(001……366) %H 小时(00……23) %k 小时(0……23) %h 小时(01……12) %I 小时(01……12) %l 小时(1……12) %i 分钟, 数字(00……59) %r 时间,12 小时(hh:mm:ss [AP]M) %T 时间,24 小时(hh:mm:ss) %S 秒(00……59) %s 秒(00……59) %p AM或PM %w 一个星期中的天数(0=Sunday ……6=Saturday ） %U 星期(0……52), 这里星期天是星期的第一天 %u 星期(0……52), 这里星期一是星期的第一天 %% 一个文字“%”     `count`统计不重复个数 select count(distinct (col_name)) from table_name     ">
+<meta property="og:description" content="按年月日分组聚合 group by date_format(field_name, format); 根据format字符串格式化date值。下列修饰符可以被用在format字符串中：
+%M 月名字(January……December) %W 星期名字(Sunday……Saturday) %D 有英语前缀的月份的日期(1st, 2nd, 3rd, 等等。） %Y 年, 数字, 4 位 %y 年, 数字, 2 位 %a 缩写的星期名字(Sun……Sat) %d 月份中的天数, 数字(00……31) %e 月份中的天数, 数字(0……31) %m 月, 数字(01……12) %c 月, 数字(1……12) %b 缩写的月份名字(Jan……Dec) %j 一年中的天数(001……366) %H 小时(00……23) %k 小时(0……23) %h 小时(01……12) %I 小时(01……12) %l 小时(1……12) %i 分钟, 数字(00……59) %r 时间,12 小时(hh:mm:ss [AP]M) %T 时间,24 小时(hh:mm:ss) %S 秒(00……59) %s 秒(00……59) %p AM或PM %w 一个星期中的天数(0=Sunday ……6=Saturday ） %U 星期(0……52), 这里星期天是星期的第一天 %u 星期(0……52), 这里星期一是星期的第一天 %% 一个文字“%”     count统计不重复个数 select count(distinct (field_name)) from table_name     ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/sql/dml/dml/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
@@ -155,8 +155,8 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>按年月日分组聚合</span></h5>
 <div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>group</span> <span style=color:#66d9ef>by</span> date_format(<span style=color:#f92672>&lt;</span>field_name<span style=color:#f92672>&gt;</span>, <span style=color:#f92672>&lt;</span>format<span style=color:#f92672>&gt;</span>);
-</code></pre></div><p>根据format字符串格式化date值。下列修饰符可以被用在format字符串中：</p>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>group</span> <span style=color:#66d9ef>by</span> date_format(field_name, format);
+</code></pre></div><p>根据<code>format</code>字符串格式化<code>date</code>值。下列修饰符可以被用在<code>format</code>字符串中：</p>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>%M 月名字<span style=color:#f92672>(</span>January……December<span style=color:#f92672>)</span> 
 %W 星期名字<span style=color:#f92672>(</span>Sunday……Saturday<span style=color:#f92672>)</span> 
 %D 有英语前缀的月份的日期<span style=color:#f92672>(</span>1st, 2nd, 3rd, 等等。） 
@@ -190,9 +190,9 @@ Ormissia's Blog</a>
 </div>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>`count`统计不重复个数</span></h5>
+<h5 class=note-title><span>count统计不重复个数</span></h5>
 <div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>select</span> <span style=color:#66d9ef>count</span>(<span style=color:#66d9ef>distinct</span> (col_name))
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>select</span> <span style=color:#66d9ef>count</span>(<span style=color:#66d9ef>distinct</span> (field_name))
 <span style=color:#66d9ef>from</span> <span style=color:#66d9ef>table_name</span>
 </code></pre></div></div>
 </div>
