deploy: cd85c9812c1b54474c109b9a93b6440786ca5bef

--- a/notes/scala/basic/basic_type/index.html
+++ b/notes/scala/basic/basic_type/index.html
@@ -53,7 +53,7 @@ Ormissia's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/notes data-filter=all>笔记</a></li>
+<li id=list-heading><a href=/notes data-filter=all></a></li>
 <div class=subtree>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
@@ -490,7 +490,7 @@ map2.put(&quot;a&quot;, 5)
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>联系方式:</h5>
+<h5></h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
 <li><span>Email: </span> <span>ormissia@outlook.com</span></li>
@@ -500,7 +500,7 @@ map2.put(&quot;a&quot;, 5)
 </div>
 <hr>
 <div class=container>
-<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
+<p id=disclaimer><strong>:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
@@ -513,7 +513,7 @@ Toha
 </div>
 <div class="col-md-4 text-center">© 2021 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
