--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@ Ormissia's Blog</a>
 <img src=/images/404_huf404c6818e5475c7870a4722b4efea20_110323_1500x0_resize_box_3.png alt="Page Not Found">
 <div class=message>
 <h1>404</h1>
-<h4>The page you are looking for is not there yet.</h4>
+<h4></h4>
 </div>
 </div>
 </div>
@@ -53,7 +53,7 @@ Ormissia's Blog</a>
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>联系方式:</h5>
+<h5></h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
 <li><span>Email: </span> <span>ormissia@outlook.com</span></li>
@@ -63,7 +63,7 @@ Ormissia's Blog</a>
 </div>
 <hr>
 <div class=container>
-<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
+<p id=disclaimer><strong>:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
@@ -76,7 +76,7 @@ Toha
 </div>
 <div class="col-md-4 text-center">© 2021 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
