--- a/search/index.html
+++ b/search/index.html
@@ -55,7 +55,7 @@ Ormissia's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/posts data-filter=all>博文</a></li>
+<li id=list-heading><a href=/posts data-filter=all></a></li>
 <div class=subtree>
 <li><a href=/posts/unclassified/ title="Markdown Sample">Markdown Sample</a></li>
 <li>
@@ -110,7 +110,7 @@ Ormissia's Blog</a>
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>联系方式:</h5>
+<h5></h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
 <li><span>Email: </span> <span>ormissia@outlook.com</span></li>
@@ -120,7 +120,7 @@ Ormissia's Blog</a>
 </div>
 <hr>
 <div class=container>
-<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
+<p id=disclaimer><strong>:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
@@ -133,7 +133,7 @@ Toha
 </div>
 <div class="col-md-4 text-center">© 2021 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
