deploy: ebdd0a2d0ae545671ba4039f46c12dbb4ce51081

--- a/search/index.html
+++ b/search/index.html
@@ -55,13 +55,14 @@ Ormissia's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/posts data-filter=all></a></li>
+<li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li><a href=/posts/unclassified/ title="Markdown Sample">Markdown Sample</a></li>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/posts/knowledge/>知识积累</a>
 <ul>
 <li><a href=/posts/knowledge/2021-07-22/ title=函数选项模式>函数选项模式</a></li>
+<li><a href=/posts/knowledge/2021-07-27/ title=请求参数校验>请求参数校验</a></li>
 </ul>
 </li>
 <li>
@@ -109,18 +110,7 @@ Ormissia's Blog</a>
 <footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
-<div class="col-md-4 col-sm-12">
-<h5></h5>
-<ul>
-<li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
-</ul>
 </div>
-</div>
-</div>
-<hr>
-<div class=container>
-<p id=disclaimer><strong>:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
@@ -133,7 +123,7 @@ Toha
 </div>
 <div class="col-md-4 text-center">© 2021 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
