--- a/notes/linux/shell/advance/index.html
+++ b/notes/linux/shell/advance/index.html
@@ -51,7 +51,7 @@ Ormissia's Blog</a>
 </form>
 <div class=sidebar-tree>
 <ul class=tree id=tree>
-<li id=list-heading><a href=/notes data-filter=all></a></li>
+<li id=list-heading><a href=/notes data-filter=all>Notes</a></li>
 <div class=subtree>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
@@ -183,18 +183,7 @@ Ormissia's Blog</a>
 <footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
-<div class="col-md-4 col-sm-12">
-<h5></h5>
-<ul>
-<li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
-</ul>
 </div>
-</div>
-</div>
-<hr>
-<div class=container>
-<p id=disclaimer><strong>:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
@@ -207,7 +196,7 @@ Toha
 </div>
 <div class="col-md-4 text-center">© 2021 Copyright.</div>
 <div class="col-md-4 text-right">
-<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>
+<a id=hugo href=https://gohugo.io/ target=_blank rel=noopener>Powered by
 <img src=/images/hugo-logo.svg alt="Hugo Logo" height=18>
 </a>
 </div>
