deploy: 5700ef54df49c73d7b2fd2bd4e7f5c70849ad644

--- a/notes/go/advance/advance/index.html
+++ b/notes/go/advance/advance/index.html
@@ -68,6 +68,7 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
 <li><a class=active href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
