--- a/notes/go/advance/index.html
+++ b/notes/go/advance/index.html
@@ -64,6 +64,7 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
 <li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
@@ -162,6 +163,15 @@ Ormissia's Blog</a>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>Time</span>.<span style=color:#a6e22e>Unix</span>()
 </code></pre></div><p>时间戳转时间</p>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Unix</span>()
+</code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>go get 下载指定版本</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>go get github.com/ormissia/go-opv@v0.0.2
 </code></pre></div></div>
 </div>
 </div>
