--- a/notes/linux/shell/basic/index.html
+++ b/notes/linux/shell/basic/index.html
@@ -77,6 +77,7 @@ Ormissia's Blog</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
 <ul>
 <li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
