--- a/search/index.html
+++ b/search/index.html
@@ -62,7 +62,7 @@ Ormissia's Blog</a>
 <i class="fas fa-plus-circle"></i><a href=/posts/knowledge/>知识积累</a>
 <ul>
 <li><a href=/posts/knowledge/2021-07-22/ title=函数选项模式>函数选项模式</a></li>
-<li><a href=/posts/knowledge/2021-07-27/ title=请求参数校验>请求参数校验</a></li>
+<li><a href=/posts/knowledge/2021-07-27/ title=实体参数校验>实体参数校验</a></li>
 </ul>
 </li>
 <li>
