--- a/notes/index.html
+++ b/notes/index.html
@@ -64,6 +64,7 @@ Ormissia's Blog</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
 <ul>
 <li><a href=/notes/go/advance/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/go/advance/gomod/ title=Advance>Advance</a></li>
 </ul>
 </li>
 </ul>
@@ -202,6 +203,15 @@ Ormissia's Blog</a>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>Time</span>.<span style=color:#a6e22e>Unix</span>()
 </code></pre></div><p>时间戳转时间</p>
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Unix</span>()
+</code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>go get 下载指定版本</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>go get github.com/ormissia/go-opv@v0.0.2
 </code></pre></div></div>
 </div>
 </div>
@@ -706,51 +716,6 @@ map2.put(&quot;a&quot;, 5)
 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
 -x exit的意思，主要是配合-s使用。。
 </code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>快捷键</span></h5>
-<div class=card>
-<div class=card-body></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>命令</span></h5>
-<div class=card>
-<div class=card-body><p>显示行号</p>
-<pre><code>:set number
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>在<code>vi</code>中执行shell命令</p>
-<pre><code>:!ls-l
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将<code>shell</code>命令的结果插入到当前行的下一行</p>
-<pre><code>:r !date  //读取系统时间并插入到当前行的下一行
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容</p>
-<pre><code>:62,72 !sort  //将62行到72行的内容进行排序
-</code></pre><p>当前光标所在行，除可以指定行号外，也可以用<code>.</code>表示</p>
-<pre><code>:. !tr [a-z] [A-Z]  //将当前行的小写转为大写
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容</p>
-<pre><code>:62,72 w !sort  //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
-<pre><code>:62 w !bash //将会把第62行的内容作为bash命令来执行并显示结果，而且不会改变当前编辑的文件的内容
-</code></pre></div>
 </div>
 </div>
 </div>
