deploy: 422704133a60b1af29d6aa7afca78cb47090440a

--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@ Ormissia's Blog</a>
 </div>
 <hr>
 <div class=container>
-<p id=disclaimer><strong>责任通知:</strong> 老铁都看底了，要负责的哦</p>
+<p id=disclaimer><strong>免责声明:</strong> 老铁都看底了，要负责的哦</p>
 </div>
 <hr>
 <div class=container>
